<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.shashank.smmk_groupproject.ui.Houses.HousesFragment"
        android:label="@string/houses"
        tools:layout="@layout/fragment_houses" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.shashank.smmk_groupproject.ui.Houses.AddHouseFragment"
        android:label="@string/add_houses"
        tools:layout="@layout/fragment_add_house" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.shashank.smmk_groupproject.ui.Houses.HousesMapFragment"
        android:label="@string/map"
        tools:layout="@layout/fragment_houses_map" />
</navigation>